add positif and negatif scenario

--- a/src/test/resources/testData/TestData.properties
+++ b/src/test/resources/testData/TestData.properties
@@ -1,4 +1,27 @@
 midtransUrl = https://demo.midtrans.com/
+shoppingCartModalTitle = Shopping Cart  
 price = 20000
 summaryAmount = 20,000
 customerModalTitle = Customer Details
+merchantName = COCO STORE
+
+#Order Summary
+orderSummarytext = Order Summary
+itemName = Midtrans Pillow
+
+creditCard = Credit Card
+selectPaymentText = Select Payment
+amountAfterPromo = 18,000
+amountSummaryAfterPromo = 18000.00
+
+
+#Correct Credit Card Data
+creditCardNumberTrue = 4811111111111114
+creditcardNumberFalse = 4911111111111113
+ExpiryDate = 02/21
+cvvNumber = 123
+otp = 112233
+
+summaryPaymentText = Issuing Bank
+
+failedStatus = Transaction failed
